app/assets/stylesheets/api/trail_page.scss
#trail-page {
    margin-top: 65px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background: rgb(240, 240, 240);
    color: rgb(75, 75, 75);
    font-family: Arial, Helvetica, sans-serif;
    
    > div {
        width: 1000px;
        
        > #location-tree {
            display: flex;
            align-items: center;
            justify-content: space-between;
            height: 50px;
    
            > div {
                font-size: 12px;

                > span {
                    margin-right: 12px;
                }

            }
    
            #search-container {
                position: relative;
                z-index: 0;
    
                #search-bar {
                    position: relative;
                    z-index: 2;
                    background-color: white;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    height: 36px;
                    width: 300px;
                    border-radius: 10px;
                    border: 1px solid rgb(220, 220, 220);
        
                    > img:first-child {
                        display: none;
                    }
        
                    > input {
                        font-size: 14px;
                        font-weight: 400;
                        color: #737373;
                        border: none;
                        width: 264px;
                        padding-left: 14px;
                    }
        
                    > input:focus {
                        outline: none;
                    }
    
                    > button {
                        border: none;
                        background-image: url("/trail_images/search_icon.png");
                        background-position: center;
                        background-repeat: no-repeat;
                        background-size: 16px 16px;
                        background-color: #52a917;
                        border-radius: 0px 10px 10px 0px;
                        height: 37px;
                        width: 37px;
                        position: relative;
                        left: 2px;
                    }
    
                    > button:hover {
                        opacity: 0.75;
                        cursor: pointer;
                    }
                    
                }
        
                > #search-modal {
                    position: absolute;
                    z-index: 1;
                    top: 37px;
                    max-height: 350px;
                    width: 300px;
                    background: white;
                    overflow-y: scroll;
                    border: 1px solid rgb(220, 220, 220);
        
                    > a {
                        display: flex;
                        align-items: center;
                        text-decoration: none;
                        height: 40px;
                        border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
                        color: rgb(70, 70, 70);
                        font-family: Arial, Helvetica, sans-serif;
        
                        > img {
                            filter: hue-rotate(70deg);
                            height: 20px;
                            margin-left: 10px;
                        }
        
                        > article {
                            margin-left: 10px;
        
                            > div:first-child {
                                font-size: 14px;
                            }
        
                            > div:last-child {
                                display: none;
                            }
                            
                        }
                        
                    }
        
                    > a:hover {
                        background-color: #52a917;
                        color: rgb(232, 232, 232);
                        cursor: pointer;

                        > img {
                            filter: brightness(0%) opacity(0.5);
                        }
                        
                    }
                    
                }
    
            }
            
        }
        
        > #trail-img {
            display: flex;
            justify-content: space-between;
            height: 300px;
            position: relative;
    
            > img {
                height: 300px;
                width: 100%;
                object-fit: cover;
                object-position: center;
            }

            > div {
                position: absolute;
                z-index: 1;
                background: linear-gradient(#ffffff00, #00000099);
                display: flex;
                align-items: flex-end;
                justify-content: space-between;
                width: 100%;
                height: 100%;

                > div {
                    color: white;
                    font-family: Arial, Helvetica, sans-serif;
                    margin: 0px 0px 50px 35px;
                    
                    > p:nth-child(1) {
                        font-size: 24px;
                        font-weight: bold;
                        margin-bottom: 15px;
                    }

                    > p:nth-child(2) {

                        > span {
                            border-radius: 6px;
                            padding: 2px 8px 4px 8px;
                            color: white;
                            margin-right: 2px;
                        }
                        
                        > .easy {
                            background-color: #428a13;
                        }

                        > .moderate {
                            background-color: rgb(0, 180, 255);
                        }

                        > .hard {
                            background-color: rgb(80, 80, 80);
                        }
                        
                    }
                    
                }

                > #star {
                    height: 40px;
                    width: 40px;
                    margin: 0px 35px 50px 0px;
                    filter: invert(100%);
                }
    
                > #star:hover {
                    transform: scale(1.25);
                    cursor: pointer;
                }

            }

            
        }

        > section {
            display: flex;

            #trail-details {
                flex-grow: 1;
            }

            #nearby-trails {
                background: yellow;
            }
            
        }

    }

    
}

